src/App.css
/* Form Elements */
.btn-primary {
  border-radius: 6px;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
  padding: 10px;
  cursor: pointer;
  transition: background-color 0.25s;
  background-color: #646cff;
  color: white;
}
.btn-primary:hover {
  background-color: #535bf2;
}

.text-input {
  background-color: #1a1a1a;
  border: 2px solid #646cff;
  margin-right: 5px;
  outline: none;
  padding: 10px;
  transition: border-color 0.25s;
  border-radius: 6px;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
}
.text-input:focus {
  border-color: #535bf2;
}

/* Icons */
svg {
  height: 1.4ch;
  margin-left: 0.5rem;
  color: white;
}

/* Specific Class Styles */
.primary-highlight {
  color: #646cff;
}

/* Layout Containers */
.title {
  font-size: 3.2em;
  line-height: 1.1;
  margin-bottom: 2rem;
  margin-top: 2rem;
}

.search-container {
  display: flex;
  justify-content: center;
}

.character {
  display: flex;
  align-items: center;
  margin-top: 3rem;
}

.left-panel {
  text-align: center;
  padding-right: 6rem;
}
.right-panel {
  border-left: 2px solid #646cff;
  padding-left: 6rem;
}
.right-panel,
.left-panel {
  justify-content: center;
}

.anime-name {
  border-bottom: 2px solid #646cff;
  padding: 1rem 0;
}

.character-summary {
  border-radius: 6px;
  border: 2px solid #646cff;
}

.character-description {
  padding: 0rem 1rem;
  line-height: 1.6;
  width: 60ch;
  max-height: 30rem;
  overflow-y: auto;
}
.character-description > p {
  margin: 1rem 0;
}

/* Cards */
.card {
  border-radius: 6px;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
  overflow: hidden;
  display: inline-block;
  border: 2px solid #646cff;
  max-width: 280px;
  height: 100%;
}
.card h2 {
  margin: 1rem;
}

/* Loading Indicator */
.loading {
  margin: 0 auto;
  text-align: center;
}

/* Image Placeholder */
.img-placeholder {
  min-width: 280px;
  min-height: 320px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #808080;
  border-bottom: 2px solid #646cff;
}
.img-placeholder img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  vertical-align: top;
}

/* Tooltip */
.tooltip {
  font-size: 14px;
}

/* Responsive Design */
@media (max-width: 1200px) {
  .card img {
    min-width: 100%;
  }

  .character {
    flex-direction: column;
  }

  .left-panel,
  .right-panel {
    padding: 0;
    margin: 0;
  }
  .right-panel {
    border-left: none;
    margin-top: 2rem;
  }

  .character-description {
    max-height: 100%;
    width: 100%;
  }
}

@media (max-width: 480px) {
  .search-container {
    flex-direction: column;
  }
  .text-input {
    margin: 1rem 0;
  }
}

